docs/notebooks/tutorials/sources/both/RQA/test/5bn_res_vec.323713.err
[NbConvertApp] Converting notebook mpi5.ipynb to notebook
[NbConvertApp] Writing 176564 bytes to mpi5_executed.ipynb
[NbConvertApp] Converting notebook mpi5_executed.ipynb to script
[NbConvertApp] Writing 9565 bytes to mpi5_executed.py
ERROR:2025-09-02 05:20:59,700:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-02 05:20:59,700:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-02 05:20:59,703:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-02 05:20:59,704:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-02 05:21:04,522:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-02 05:21:04,522:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-02 05:21:04,522:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-02 05:21:04,522:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 344, in <module>
    main()
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 318, in main
    result = bn_res_vec_mpi(
             ^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 281, in bn_res_vec_mpi
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 344, in <module>
    main()
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 318, in main
    result = bn_res_vec_mpi(
             ^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 281, in bn_res_vec_mpi
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 344, in <module>
    main()
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 318, in main
    result = bn_res_vec_mpi(
             ^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 281, in bn_res_vec_mpi
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 344, in <module>
    main()
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 318, in main
    result = bn_res_vec_mpi(
             ^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 281, in bn_res_vec_mpi
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 344, in <module>
    main()
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 344, in <module>
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 318, in main
    result = bn_res_vec_mpi(
             main()
    ^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 281, in bn_res_vec_mpi
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 318, in main
    result = bn_res_vec_mpi(
             ^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 281, in bn_res_vec_mpi
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 344, in <module>
    main()
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 318, in main
    result = bn_res_vec_mpi(
             ^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 281, in bn_res_vec_mpi
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 344, in <module>
    main()
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi5_executed.py", line 318, in main
    result = bn_res_vec_mpi(
             ^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 281, in bn_res_vec_mpi
    B_sticks0 = B_sticks_vec(sgrid, surface, coords, stick_data, mpi_comm=mpi_comm, split_targets=split_targets)
    B_sticks0 = B_sticks_vec(sgrid, surface, coords, stick_data, mpi_comm=mpi_comm, split_targets=split_targets)
    B_sticks0 = B_sticks_vec(sgrid, surface, coords, stick_data, mpi_comm=mpi_comm, split_targets=split_targets)
    B_sticks0 = B_sticks_vec(sgrid, surface, coords, stick_data, mpi_comm=mpi_comm, split_targets=split_targets)
                                                        ^^^^  ^^^^^^^^^^^^^^^^^^^^^      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^    B_sticks0 = B_sticks_vec(sgrid, surface, coords, stick_data, mpi_comm=mpi_comm, split_targets=split_targets)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^    B_sticks0 = B_sticks_vec(sgrid, surface, coords, stick_data, mpi_comm=mpi_comm, split_targets=split_targets)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^    B_sticks0 = B_sticks_vec(sgrid, surface, coords, stick_data, mpi_comm=mpi_comm, split_targets=split_targets)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^    B_sticks0 = B_sticks_vec(sgrid, surface, coords, stick_data, mpi_comm=mpi_comm, split_targets=split_targets)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^     ^^^^^^^
^^^^^^^^^^^^^^
^^^^^^^^^^^^^                 File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 232, in B_sticks_vec
^
^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 232, in B_sticks_vec
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 232, in B_sticks_vec
               File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 232, in B_sticks_vec
 ^^^^^^^^^^^^^^           ^ ^^^^^^^^^^^^^^^^^^^^^^^^^   ^^^^^^^^^^^^^    b_global_np = np.concatenate(all_B, axis=1)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   ^^^^^^^^^^^^^^^^    ^^^^^^^^^^^^^^^^       ^^^^^^^^^^^^^^^    ^^^^^^^^^^^^^    b_global_np = np.concatenate(all_B, axis=1)^^^^^^^^^^^^^^^^^^^    b_global_np = np.concatenate(all_B, axis=1)

^^^^^^^^^^^^^^^^^^^    b_global_np = np.concatenate(all_B, axis=1)
^^^^^^^^^^^^^^^^             ^^^^^^^^^^^^^^^^^^^^^^^^                      ^^^
^^^^^^^^^^^^^^^^        ^^        ^^^^   ^^^^^^^^ValueError: all the input array dimensions except for the concatenation axis must match exactly, but along dimension 0, the array at index 0 has size 821 and the array at index 1 has size 820
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^
^^^^^^^^^^^^^^^ValueError: all the input array dimensions except for the concatenation axis must match exactly, but along dimension 0, the array at index 0 has size 821 and the array at index 1 has size 820^
ValueError^^^^^^^^^^^^^ValueError: 
: all the input array dimensions except for the concatenation axis must match exactly, but along dimension 0, the array at index 0 has size 821 and the array at index 1 has size 820^^^^^^^^^^^all the input array dimensions except for the concatenation axis must match exactly, but along dimension 0, the array at index 0 has size 821 and the array at index 1 has size 820

^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^
^^^^^^^^^^^^^^  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 232, in B_sticks_vec
^^^^^^^^^^^^^^^^^  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 232, in B_sticks_vec
^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 232, in B_sticks_vec
^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_multi.py", line 232, in B_sticks_vec
    b_global_np = np.concatenate(all_B, axis=1)
                  ^^^^^^^^^^^^^^    b_global_np = np.concatenate(all_B, axis=1)
^^^^^^^^^^^^^^    b_global_np = np.concatenate(all_B, axis=1)
    b_global_np = np.concatenate(all_B, axis=1)
            ^
ValueError: all the input array dimensions except for the concatenation axis must match exactly, but along dimension 0, the array at index 0 has size 821 and the array at index 1 has size 820
      ^^^         ^^^^^^^^                      ^^^^^^^^^^^^^^     ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ValueError: all the input array dimensions except for the concatenation axis must match exactly, but along dimension 0, the array at index 0 has size 821 and the array at index 1 has size 820
^^^^^^^^^^^^^^^
^^^^^^
ValueErrorValueError: all the input array dimensions except for the concatenation axis must match exactly, but along dimension 0, the array at index 0 has size 821 and the array at index 1 has size 820: all the input array dimensions except for the concatenation axis must match exactly, but along dimension 0, the array at index 0 has size 821 and the array at index 1 has size 820

--------------------------------------------------------------------------
Primary job  terminated normally, but 1 process returned
a non-zero exit code. Per user-direction, the job has been aborted.
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpiexec detected that one or more processes exited with non-zero status, thus causing
the job to be terminated. The first process to do so was:

  Process name: [[45078,1],2]
  Exit code:    1
--------------------------------------------------------------------------
